# Goober-Engine

./: .gitignore  Background.cpp  Base.cpp  CMakeLists.txt  Create1.cpp  Create1.h  Game Engine.sln  OpenGLTest.vcxproj  OpenGLTest.vcxproj.filters  Player.cpp  README.md  conanfile.txt  main.cpp  vcpkg.json
Engine/: Goober.cpp  Goober.h  Main.cpp  main.cpp
Game Engine/: Background.cpp  Game Engine.vcxproj  Game Engine.vcxproj.filters  Goober.cpp  Goober.h  Main.cpp  Player.cpp
Scripts/: Player.cpp
engine/: Goober.cpp  Goober.h  Main.cpp
root/scripts/: Player.cpp
x64/Debug/: CodeAnalysisResultManifest.txt  Create1.exe.recipe  Create1.ilk  Create1.nativecodeanalysis.sarif  Create1.nativecodeanalysis.xml  OpenGLTest.exe.recipe  OpenGLTest.ilk  background.new.obj.enc  create1.new.obj.enc  create1.obj.enc  main.new.obj.enc  main.obj.enc  player.new.obj.enc  vc.nativecodeanalysis.all.xml  vc143.idb
x64/Debug/Create1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/OpenGLTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGLTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
